test/testData/highlight/errors/type/f1.ml
let x : int = 0.

(*
File "f1.ml", line 2, characters 8-9:
Error: This expression has type float
       This is not a function; it cannot be applied.

File "f1.ml", line 2, characters 8-9:
2 | let y = x 0
            ^
Error: This expression has type float
       This is not a function; it cannot be applied.
*)